fix: improve purple button contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -104,7 +104,6 @@ video {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
